# Supply_chain_12_agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/approvals/: agent.py
agents/customer_delivery/: agent.py
agents/forecasting/: agent.py
agents/inventory/: agent.py
agents/issue_resolution/: agent.py
agents/logistics/: agent.py
agents/monitoring/: agent.py
agents/orchestrator/: agent.py
agents/production/: agent.py
agents/reporting/: agent.py
agents/teams/: agent.py
api/: main.py
common/: agents_base.py
common/bus/: redis_bus.py
common/config/: settings.py
common/events/: schemas.py
common/llm/: client.py
common/storage/: minio_client.py  neo4j_client.py  postgres.py
dashboard/: index.html
migrations/neo4j/: 001_init.cypher
migrations/postgres/: 001_init.sql  002_incidents.sql
scripts/: fire_test_alerts.py  fire_test_order.py  seed_demo_data.py
